# OpenGL-Learn

./: .gitmodules  CMakeLists.txt  Makefile  imgui.ini  main.cpp  start
res/maps/: obby.rtmap
res/shaders/: main.fs  main.vs  render.frag  render.vert  screen.frag  screen.vert
src/: game.cpp  game.h  main.cpp
src/engine/: graphics.cpp  graphics.h  input.cpp
